@@ -1,3 +1,6 @@
+2007-04-13: [Jacques]
+* add glPolygonOffset
+
 2006-07-29: [Jacques]
 * make LablGlut's callback window dependent
 * simplify glutInit
